added style to :root describing font and line-height; Added sample Header

--- a/Tyler-M-Portfolio.html
+++ b/Tyler-M-Portfolio.html
@@ -5,4 +5,14 @@
         <link href="reset.css">
         <link href="style.css">
     </head>
+    <body>
+        <section>
+            <h1>Example Heading</h1>
+            <ul display: inline>
+                <li>Sample</li>
+                <li>sample</li>
+                <li>sample</li>
+            </ul>
+        </section>
+    </body>
 </html>
