Updated Header style and color

--- a/Tyler-M-Portfolio.html
+++ b/Tyler-M-Portfolio.html
@@ -2,17 +2,28 @@
 <html>
     <head>
         <title>Tyler M. Portfolio</title>
-        <link href="reset.css">
-        <link href="style.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section>
-            <h1>Example Heading</h1>
-            <ul display: inline>
-                <li>Sample</li>
-                <li>sample</li>
-                <li>sample</li>
-            </ul>
-        </section>
+        <header class="header">
+            <h1>Tyler M.</h1>
+    
+            <!--Links that will direct you to specified id-->
+    
+            <section>
+                <ul>
+                    <li>
+                        <a href="">About Me</a>
+                    </li>
+                    <li>
+                        <a href="">My Projects</a>
+                    </li>
+                    <li>
+                        <a href="">Contact Info</a>
+                    </li>
+                </ul>
+            </section>
+        </header>
     </body>
 </html>
