Added comments to CSS; added personal image to about me section; placed sample text for styling purposes

--- a/Tyler-M-Portfolio.html
+++ b/Tyler-M-Portfolio.html
@@ -14,7 +14,7 @@
             <section>
                 <ul>
                     <li>
-                        <a href="">About Me</a>
+                        <a href="#about-me">About Me</a>
                     </li>
                     <li>
                         <a href="">My Projects</a>
@@ -25,6 +25,12 @@
                 </ul>
             </section>
         </header>
-        
+        <article id="about-me">
+            <img src="images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
+            <h2>All About Me</h2>
+            <p>
+                This is a sample text line aaaaa aaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa aaaaaaaaaa
+            </p>
+        </article>
     </body>
 </html>
