--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
             <p>
                 Hello! My name is Tyler Morse. I've been with my fiance McKenzie for 4 years, and we have a beautiful 2 year old daughter Emma. I was born in Mesa, AZ, and grew up almost my entire life in south Scottsdale with my younger sister and single mom.
                 Summers were spent with my father and his computer shop in Central Point, OR. I graduated from Coronado High School in 2016.<br>
-                <br>
                 Due to an unstable living environment, I moved out on my own at 17, my Junior year of high school, and have been supporting myself since.
                 My problem solving abilities and motivation have been key in my navigation of lifes challenges; Raising a daughter with low-income and suffering a serious motor-scooter accident that left permanent disability and required three surgeries and 14 months of recovery being two of the most severe.
-                Those key skills have maintained my focus and drive, along with the desire to provide for my daughter like my mother was never able to for my sister and I, allowing me to gain the confidince in myself and my abilities to pursue my passion; technology. I love traveling and spending time outside with family.
+                Those key skills have maintained my focus and drive, allowing me to gain the confidince in myself and my abilities to pursue my passion; technology. I love traveling and spending time outside with family.
             </p>
         </div>
         </article>
