Added screenshot of deployed app w/ link

--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
             </p>
         </div>
         </article>
+        <main id="my-projects">
+            <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
+        </main>
     </body>
-</html>
+</html
