Added hidden pop-up text w/ style (not yet functioning); Code changes to class='feature'; added class name 'tooltip' to large image link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <a href="#about-me">About Me</a>
                     </li>
                     <li>
-                        <a href="">My Projects</a>
+                        <a href="#my-projects">My Projects</a>
                     </li>
                     <li>
                         <a href="">Contact Info</a>
@@ -39,7 +39,7 @@
         </div>
         </article>
         <main id="my-projects">
-            <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
+            <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
         </main>
     </body>
 </html
