Added large background image between nav bar and About Me section to showcase links at top, as well as asthetics

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 </ul>
             </section>
         </header>
+        <img class="background-pic" src="images/PXL_20220619_183439001.jpg" alt="A photo from a recent trip to Slide Rock in northern Arizona">
         <article id="about-me">
             <img src="images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
         <div>
