Added 3 placeholder images and links to represent future projects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                 </ul>
             </section>
         </header>
+
+        <!-- Background image -->
         <img class="background-pic" src="images/PXL_20220619_183439001.jpg" alt="A photo from a recent trip to Slide Rock in northern Arizona">
+
+        <!-- About Me section -->
         <article id="about-me">
             <img src="images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
         <div>
@@ -39,8 +43,16 @@
             </p>
         </div>
         </article>
+
+        <!-- Project section -->
+
+        <!-- Feature Project w/ link -->
         <main id="my-projects">
             <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
+            <div class="projects"><a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+            </div>
         </main>
     </body>
-</html
+</html>
