--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <!-- Feature Project w/ link -->
         <main id="my-projects">
             <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
-            <div class="projects"><a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+            <div class="projects"><a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 2</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 3</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
     </body>
