added basic contact info

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="#my-projects">My Projects</a>
                     </li>
                     <li>
-                        <a href="">Contact Info</a>
+                        <a href="#contact">Contact Info</a>
                     </li>
                 </ul>
             </section>
@@ -54,5 +54,14 @@
                 <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
+        <footer>
+            <h3 id="contact">Contact Information</h3>
+            <ul>
+                <li>Email:<a href="" target="blank">tmorse2222@gmail.com</a></li>
+                <li>Phone:(480)-490-6617</li>
+                <li>LinkedIn:<a href="" target="blank">Profile on LinkedIn</a></li>
+                <li>Follow me on <a href="" target="blank">Facebook</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
