Added link to email in Contact info

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
-        <footer>
-            <h3 id="contact">Contact Information</h3>
+        <footer id="contact">
+            <h3>Contact Information</h3>
             <ul>
-                <li>Email:<a href="" target="blank">tmorse2222@gmail.com</a></li>
+                <li>Email:<a href="mailto:tmorse2222@gmail.com" target="blank">tmorse2222@gmail.com</a></li>
                 <li>Phone:(480)-490-6617</li>
-                <li>LinkedIn:<a href="" target="blank">Profile on LinkedIn</a></li>
+                <li>LinkedIn:<a href="mailto:tmorse2222@gmail.com" target="blank">Profile on LinkedIn</a></li>
                 <li>Follow me on <a href="" target="blank">Facebook</a></li>
             </ul>
         </footer>
