completed footer, application Live

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <ul>
                 <li>Email:<a href="mailto:tmorse2222@gmail.com" target="blank">tmorse2222@gmail.com</a></li>
                 <li>Phone:(480)-490-6617</li>
-                <li>LinkedIn:<a href="https://www.linkedin.com/in/tyler-morse-ab8069241/" target="blank">Profile on LinkedIn</a></li>
+                <li>Profile on <a href="https://www.linkedin.com/in/tyler-morse-ab8069241/" target="blank">LinkedIn</a></li>
                 <li>Follow me on <a href="https://www.facebook.com/profile.php?id=100081851958431" target="blank">Facebook</a></li>
             </ul>
         </footer>
