Re-structured code in more organized manner; added comments

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Links  to CSS and Title of Page -->
+        <meta charset="UTF-8">
         <title>Tyler M. Portfolio</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
+    <!-- Visible Application -->
     <body>
+        <!-- Nav Bar -->
         <header class="header">
             <h1>Tyler M.</h1>
-    
             <!--Links that will direct you to specified id-->
-    
             <section>
                 <ul>
                     <li>
@@ -25,13 +27,12 @@
                 </ul>
             </section>
         </header>
-
         <!-- Background image -->
         <img class="background-pic" src="images/PXL_20220619_183439001.jpg" alt="A photo from a recent trip to Slide Rock in northern Arizona">
-
         <!-- About Me section -->
         <article id="about-me">
             <h2>All About Me</h2>
+            <!-- Image and body text -->
         <div>
             <img src="images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
             <p><br>
@@ -43,17 +44,18 @@
             </p>
         </div>
         </article>
-
         <!-- Project section -->
-
         <!-- Feature Project w/ link -->
         <main id="my-projects">
             <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
-            <div class="projects"><a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 2</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+            <!-- Other projects w/ links -->
+            <div class="projects">
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 2</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 3</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
+        <!-- Footer w/ Contact information -->
         <footer id="contact">
             <h3>Contact Information</h3>
             <ul>
