Organized files for recommended structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <!-- Links  to CSS and Title of Page -->
         <meta charset="UTF-8">
         <title>Tyler M. Portfolio</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/reset.css">
+        <link rel="stylesheet" href="assets/style.css">
     </head>
     <!-- Visible Application -->
     <body>
@@ -28,13 +28,13 @@
             </section>
         </header>
         <!-- Background image -->
-        <img class="background-pic" src="images/PXL_20220619_183439001.jpg" alt="A photo from a recent trip to Slide Rock in northern Arizona">
+        <img class="background-pic" src="assets/images/PXL_20220619_183439001.jpg" alt="A photo from a recent trip to Slide Rock in northern Arizona">
         <!-- About Me section -->
         <article id="about-me">
             <h2>All About Me</h2>
             <!-- Image and body text -->
         <div>
-            <img src="images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
+            <img src="assets/images/PXL_20220620_014507044.jpg" alt="An image of myself (Tyler) with my fiance and two year old daughter at dinner">
             <p><br>
                 Hello! My name is Tyler Morse. I've been with my fiance McKenzie for 4 years, and we have a beautiful 2 year old daughter Emma.<br> I was born in Mesa, AZ, and grew up almost my entire life in south Scottsdale with my younger sister and single mom.
                 Summers were spent with my father and his computer shop in Central Point, OR.<br> I graduated from Coronado High School in 2016.<br>
@@ -47,12 +47,12 @@
         <!-- Project section -->
         <!-- Feature Project w/ link -->
         <main id="my-projects">
-            <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
+            <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="assets/images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 2</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 3</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 2</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 3</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
         <!-- Footer w/ Contact information -->
