Added Password Generator to general projects area; added image of project to assets folder

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <a class="tooltip" href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup1">Project 1- HTML and CSS Refactor</span><img src="assets/images/screenshot.png" alt="A Screenshot and link to the first project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">HTML and CSS Refactor</span><img src="assets/images/project1.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 3</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup2">HTML and CSS Refactor</span><img src="assets/images/project1.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://tmorse2222.github.io/SpecifiedPasswordGenerator/" target="blank"><span class="popup2">Password Generator</span><img src="assets/images/project2.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
