Added Day Planner to the general project list

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div class="projects">
                 <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup2">HTML and CSS Refactor</span><img src="assets/images/project1.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://tmorse2222.github.io/SpecifiedPasswordGenerator/" target="blank"><span class="popup2">Password Generator</span><img src="assets/images/project2.png" alt="A screenshot and link to the second project"></a>
-                <a href="https://github.com/tmorse2222" target="blank"><span class="popup2">Project 4</span><img src="assets/images/placeholder.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://tmorse2222.github.io/CodingSkillsEvaluation/" target="blank"><span class="popup2">Coding Skill Evaluation</span><img src="assets/images/project3.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://tmorse2222.github.io/DailyPlanner/" target="blank"><span class="popup2">Day Planner</span><img src="assets/images/project4.png" alt="A screenshot and link to the second project"></a>
             </div>
         </main>
         <!-- Footer w/ Contact information -->
