Updated content for about me section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 Summers were spent with my father and his computer shop in Central Point, OR.<br> I graduated from Coronado High School in 2016.<br>
                 Due to an unstable living environment, I moved out on my own at 17, my Junior year of high school, and have been supporting myself since.<br>
                 My problem solving abilities and motivation have been key in my navigation of lifes challenges; Raising a daughter with low-income and suffering a serious motor-scooter accident that left permanent disability and required three surgeries with 14 months of recovery being two of the most severe.<br>
-                Those key skills have maintained my focus and drive, allowing me to gain the confidince in myself and my abilities to pursue my passion; technology.<br>I love traveling and spending time outside with family.
+                Those key skills have maintained my focus and drive, allowing me to gain the confidince in myself and my abilities to pursue my passion; technology.<br>By day I work retail, by night a student attending the University of Arizona full-stack web development bootcamp, learning a variety of programing languages and frameworks to take my knowledge to the next level.
+                <br>I love traveling and spending time outside with family.
             </p>
         </div>
         </article>
