Moved featured project into normal project section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <a href="https://tmorse2222.github.io/SpecifiedPasswordGenerator/" target="blank"><span class="popup2">Password Generator</span><img src="assets/images/project2.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://tmorse2222.github.io/CodingSkillsEvaluation/" target="blank"><span class="popup2">Coding Skill Evaluation</span><img src="assets/images/project3.png" alt="A screenshot and link to the second project"></a>
                 <a href="https://tmorse2222.github.io/DailyPlanner/" target="blank"><span class="popup2">Day Planner</span><img src="assets/images/project4.png" alt="A screenshot and link to the second project"></a>
+                <a href="https://tmorse2222.github.io/WeatherChecker/" target="blank"><span class="popup2">Weather Checker</span><img src="assets/images/project5.png" alt="A Screenshot and link to the first project"></a>
             </div>
         </main>
         <!-- Footer w/ Contact information -->
