--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Project section -->
         <!-- Feature Project w/ link -->
         <main id="my-projects">
-            <a class="tooltip" href="https://tmorse2222.github.io/WeatherChecker/" target="blank"><span class="popup1">Weather Checker</span><img src="assets/images/project5.png" alt="A Screenshot and link to the first project" class="feature"></a>
+            <a class="tooltip" href="https://tmorse2222.github.io/Trivia-Time/" target="blank"><span class="popup1">Trivia Time!</span><img src="assets/images/project6.png" alt="A Screenshot and link to the first project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
                 <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup2">HTML and CSS Refactor</span><img src="assets/images/project1.png" alt="A screenshot and link to the second project"></a>
