--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a class="tooltip" href="https://drive.google.com/file/d/1zhyGm1PQoVEITU01noNbAy4ZuFc1lqVW/view" target="blank"><span class="popup1">Node.js README Generator</span><img src="assets/images/project8.png" alt="A Screenshot and link to the feature project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
+                <a href="https://drive.google.com/file/d/1zhyGm1PQoVEITU01noNbAy4ZuFc1lqVW/view" target="blank"><span class="popup2">Node.js README Generator</span><img src="assets/images/project8.png" alt="A screenshot and link to the eigth project"></a>
                 <a href="https://tmorse2222.github.io/Trivia-Time/" target="blank"><span class="popup2">Trivia Time!</span><img src="assets/images/project6.png" alt="A screenshot and link to the sixth project"></a>
                 <a href="https://tmorse2222.github.io/Challenge1-HTML-CSS_Refactor/" target="blank"><span class="popup2">HTML and CSS Refactor</span><img src="assets/images/project1.png" alt="A screenshot and link to the fifth project"></a>
                 <a href="https://tmorse2222.github.io/SpecifiedPasswordGenerator/" target="blank"><span class="popup2">Password Generator</span><img src="assets/images/project2.png" alt="A screenshot and link to the fourth project"></a>
