Added Team Info Generator to project section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a class="tooltip" href="https://drive.google.com/file/d/1zhyGm1PQoVEITU01noNbAy4ZuFc1lqVW/view" target="blank"><span class="popup1">Node.js README Generator</span><img src="assets/images/project8.png" alt="A Screenshot and link to the feature project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
+                <a href="https://drive.google.com/file/d/1GHK6LEzRQAzWimgkiPjjyb3kRm5CqWKp/view" target="blank"><span class="popup2">Node.js Team Info Generator</span><img src="assets/images/project9.png" alt="A screenshot and link to the ninth project"></a>
                 <a href="https://lit-everglades-41850.herokuapp.com/" target="blank"><span class="popup2">Express.js Note Taker</span><img src="assets/images/project7.png" alt="A screenshot and link to the seventh project"></a>
                 <a href="https://drive.google.com/file/d/1zhyGm1PQoVEITU01noNbAy4ZuFc1lqVW/view" target="blank"><span class="popup2">Node.js README Generator</span><img src="assets/images/project8.png" alt="A screenshot and link to the eigth project"></a>
                 <a href="https://tmorse2222.github.io/Trivia-Time/" target="blank"><span class="popup2">Trivia Time!</span><img src="assets/images/project6.png" alt="A screenshot and link to the sixth project"></a>
