Added E-commerce Back End to feature project section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Project section -->
         <!-- Feature Project w/ link -->
         <main id="my-projects">
-            <a class="tooltip" href="https://drive.google.com/file/d/1zhyGm1PQoVEITU01noNbAy4ZuFc1lqVW/view" target="blank"><span class="popup1">Node.js README Generator</span><img src="assets/images/project8.png" alt="A Screenshot and link to the feature project" class="feature"></a>
+            <a class="tooltip" href="https://drive.google.com/file/d/1Vs-x6u_6WnTYwaXEJPYBbUrJqZyprmYq/view" target="blank"><span class="popup1">Sequelize E-Commerce Back-End</span><img src="assets/images/project11.png" alt="A Screenshot and link to the feature project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
                 <a href="https://drive.google.com/file/d/1BJ3A17VPO9xyPI7A9FYKqPIwEwAxX9tO/view" target="blank"><span class="popup2">Node.js Team Info Generator</span><img src="assets/images/project10.png" alt="A screenshot and link to the tenth project"></a>
