--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a class="tooltip" href="https://drive.google.com/file/d/1Vs-x6u_6WnTYwaXEJPYBbUrJqZyprmYq/view" target="blank"><span class="popup1">Sequelize E-Commerce Back-End</span><img src="assets/images/project11.png" alt="A Screenshot and link to the feature project" class="feature"></a>
             <!-- Other projects w/ links -->
             <div class="projects">
+                <a href="https://radiant-chamber-76949.herokuapp.com/" target="blank"><span class='popup2'>Counting Sheep</span><img src="assets/images/sheep.png" alt="A Screenshot and link to the twelth project"></a>
                 <a href="https://peaceful-plateau-02295.herokuapp.com/login" target="blank"><span class='popup2'>FitTracker</span><img src="assets/images/project12.png" alt="A Screenshot and link to the twelth project"></a>
                 <a href="https://drive.google.com/file/d/1BJ3A17VPO9xyPI7A9FYKqPIwEwAxX9tO/view" target="blank"><span class="popup2">Node.js Team Info Generator</span><img src="assets/images/project10.png" alt="A screenshot and link to the tenth project"></a>
                 <a href="https://drive.google.com/file/d/1GHK6LEzRQAzWimgkiPjjyb3kRm5CqWKp/view" target="blank"><span class="popup2">MySQL Employer Data Base</span><img src="assets/images/project9.png" alt="A screenshot and link to the ninth project"></a>
